pageslider: avoid lateral shift on showall mode

--- a/src/pageslider.styl
+++ b/src/pageslider.styl
@@ -35,6 +35,7 @@
 	opacity: 0.6;
 	transform: none;
 	position: relative;
+	border-left: 4px solid #fff0;
 }
 
 .pageslider-page.active.showall
